remove unnecessary libs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-apache-pulsar-api",
+  "name": "rest-kafka-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/command-line-args": "^5.2.3",
-    "command-line-args": "^5.2.1",
     "express": "^4.19.2",
     "kafkajs": "^2.2.4",
-    "pulsar-client": "^1.10.0",
     "tsx": "^4.7.1"
   },
   "devDependencies": {
